all 1 tasks added to poster

--- a/templates/poster.html
+++ b/templates/poster.html
@@ -57,10 +57,18 @@
     </div>
     
     <div class="task">
-        <h2></h2>
+        <h2>1-VALID: Add Basic Data Validation</h2>
         
         <p>
-            I used flask
+            I added validation
+        </p>
+    </div>
+    
+    <div class="task">
+        <h2>1-STYLE: Style Your Editor Just How You Like It</h2>
+        
+        <p>
+            I made it pretty by adding cars 
         </p>
     </div>
     
