all 2 tasks added

--- a/templates/poster.html
+++ b/templates/poster.html
@@ -68,7 +68,39 @@
         <h2>1-STYLE: Style Your Editor Just How You Like It</h2>
         
         <p>
-            I made it pretty by adding cars 
+            I made it pretty by adding cars
+        </p>
+    </div>
+    
+    <div class="task">
+        <h2>2-EDIT: Edit the Record by Loading its Current Values into the Form</h2>
+        
+        <p>
+            I added stuff automatically
+        </p>
+    </div>
+    
+    <div class="task">
+        <h2>2-FORM: Make the Form Better</h2>
+        
+        <p>
+            I made the form fancy
+        </p>
+    </div>
+    
+    <div class="task">
+        <h2>2-COST: Calculate and Save the Game Cost of the Buggy</h2>
+        
+        <p>
+            I saved the cost
+        </p>
+    </div>
+    
+    <div class="task">
+        <h2>2-RULES: Add Validation According to the Game Rules</h2>
+        
+        <p>
+            I added rules
         </p>
     </div>
     
