all 3 tasks added

--- a/templates/poster.html
+++ b/templates/poster.html
@@ -104,6 +104,54 @@
         </p>
     </div>
     
+    <div class="task">
+        <h2>3-ENV: Switch to Using Development or Production Environments</h2>
+        
+        <p>
+            I used development the whole time
+        </p>
+    </div>
+    
+    <div class="task">
+        <h2>3-AUTOFILL: Add Auto-Fill to the Edit Forms</h2>
+        
+        <p>
+            I did not complete this
+        </p>
+    </div>
+    
+    <div class="task">
+        <h2>3-MULTI: Allow Different Buggies to be Created</h2>
+        
+        <p>
+            I did this
+        </p>
+    </div>
+    
+    <div class="task">
+        <h2>3-DEL: Allow Buggies to be Deleted</h2>
+        
+        <p>
+            Buggies can be deleted
+        </p>
+    </div>
+    
+    <div class="task">
+        <h2>3-FLAG: Display the Pennant Graphically</h2>
+        
+        <p>
+            Flag displayed
+        </p>
+    </div>
+    
+    <div class="task">
+        <h2>3-TESTS: Write Some Tests</h2>
+        
+        <p>
+            Tested using 'FIXME'
+        </p>
+    </div>
+    
 </section>
 
 {% endblock %}
