rules button added to index.html so it can be seen on the homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
 </h2>
 
   <div class="spacer">
+    <a href="/rules" class="button">See The Rules</a>
     <a href="/new" class="button">Make Your Buggy</a>
     <a href="/buggy" class="button">Show Your Buggies</a>
     <a href="/json" class="button">Get Your Buggy (JSON)</a>
