qty_wheels must be greater than or equal to 4 and even rule added

--- a/templates/rules.html
+++ b/templates/rules.html
@@ -3,3 +3,27 @@
 
 <section class="cs1999-rules">
     <h1>Rules For Buggy Racing</h1>
+    
+    <h2>
+    RULE 1:
+    </h2>
+    
+    <p>
+    Number of Wheels must be 4 or more AND even!
+    </p>
+    
+    <h2>RULE 2:</h2>
+    
+    <p>
+    The following fuels are non-consumable and you can only have ONE unit of these fuels:
+    </p>
+    <ol>
+        <li>fusion</li>
+        <li>thermo</li>
+        <li>solar</li>
+        <li>wind</li>
+    <ol>
+    
+</section>
+
+{% endblock %}
