--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -24,6 +24,12 @@
     </tr>
    
    <tr>
+       <td> 
+           <span>Flag Design</span>
+        </td>
+    </tr>
+   
+   <tr>
        <td>Flag Pattern:</td> <td> {{buggy['flag_pattern']}} </td>
     </tr>
    
