all rules added

--- a/templates/rules.html
+++ b/templates/rules.html
@@ -12,7 +12,9 @@
     Number of Wheels must be 4 or more AND even!
     </p>
     
-    <h2>RULE 2:</h2>
+    <h2>
+        RULE 2:
+    </h2>
     
     <p>
     The following fuels are non-consumable and you can only have ONE unit of these fuels:
@@ -23,6 +25,30 @@
         <li>solar</li>
         <li>wind</li>
     <ol>
+    
+    <h2>
+        RULE 3:
+    </h2>
+    
+    <p>
+    Flag colours must be either HEX colours or strings
+    </p>
+    
+    <h2>
+        RULE 4:
+    </h2>
+    
+    <p>
+    Every Flag Pattern EXCEPT <code> plain </code> must include TWO different colours
+    </p>
+    
+    <h2>
+        RULE 5:
+    </h2>
+    
+    <p>
+    The Number of Tyres must be greater than the Number of Wheels
+    </p>
     
 </section>
 
