car animation added because CUTE

--- a/templates/rules.html
+++ b/templates/rules.html
@@ -24,7 +24,7 @@
         <li>thermo</li>
         <li>solar</li>
         <li>wind</li>
-    <ol>
+    </ol>
     
     <h2>
         RULE 3:
@@ -51,5 +51,11 @@
     </p>
     
 </section>
+
+<div class="car1" style="position: relative; bottom: 10px">
+    <marquee behaviour="scroll" direction="right" scrollamount="15">
+        <img src="/static/pink-car.png" width="120" height="80" alt="Natural"/>
+    </marquee>
+</div>
 
 {% endblock %}
