i can't remember what i did... probably just a random accidental spacebar click

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -17,7 +17,7 @@
 </p>
 
 <p>
-    <a href="/new" class="button" onClick="autofill();"> Click to Autofill </a>
+    <a href="/autofill" class="button" onClick="autofill()"> Click to Autofill </a>
 </p>
 
 <p>
