json linked to each buggy table

--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -109,6 +109,10 @@
         </td>
     </tr>
    
+   <tr>
+       <td colspan="2"><a href="/json/{{ buggy['id'] }}">Get Your Buggy (JSON)</a></td>
+    </tr>
+   
   </table>
 
 {% endfor %}
