--- a/templates/rules.html
+++ b/templates/rules.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 
+<div class="car2" style="position: relative; bottom: 10px">
+    <marquee behaviour="scroll" direction="right" scrollamount="15">
+        <img src="/static/pink-car.png" width="120" height="80" alt="Natural"/>
+    </marquee>
+</div>
+
 <section class="cs1999-rules">
     <h1>Rules For Buggy Racing</h1>
     
