--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -104,7 +104,7 @@
    <tr>
        <td colspan="2">
            <form method="POST" action="/delete/{{ buggy['id'] }}">
-               <button type="submit">Delete Buggy</button>
+               <button type="submit" class="button">Delete Your Buggy</button>
             </form>
         </td>
     </tr>
