style and extra info finalised

--- a/templates/poster.html
+++ b/templates/poster.html
@@ -275,6 +275,18 @@
         </p>
     </div>
     
+    <div class="task">
+        <h2>EXTRA CONTENT!</h2>
+        
+        <p>
+        After completing task 3-MULTI, I noticed that the JSON for the buggy was no longer produced. This is because there are now multiple buggies instead of just one.
+        </p>
+        
+        <p>
+        To solve this issue I had to edit the JSON route so that it was a <code>GET</code> method and ensure that it was calling <code>buggy_id</code>. Then I removed the link from the homescreen. Once this was done, I moved the link so that it was displayed at each buggy table. When the link is pressed, it displays the JSON for that specific buggy.
+        </p>
+        </div>
+    
 </section>
 
 <div class="car2" style="position: relative; bottom: 10px">
